# project-launcher

./: .claudeignore  .dart_tool  .editorconfig  .env  .env.example  .gitignore  .ocean_clone_manifest  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASE_PLAN.md  RELEASE_TASKS.md  brainstorm-new-feature-2026-04-03.md  brainstorm-universal-developer-adoption-2026-03-13.md  build  catalog.example.yaml  docker-compose.yml  hello.txt  install.sh  launch-content.md  melos.yaml  plan.md  pubspec.yaml  release.sh  release_app.sh  trial2.md
.github/workflows/: ci.yml  deploy-netlaunch.yml  release.yml
backend/: Cargo.toml  Dockerfile
backend/src/: app_state.rs  db.rs  main.rs  tests.rs
backend/src/middleware/: auth.rs  mod.rs  require_role.rs  tenant.rs
backend/src/models/: api_key.rs  catalog.rs  license.rs  member.rs  mod.rs  onboarding.rs  org.rs  super_admin.rs
backend/src/routes/: auth.rs  catalog.rs  license.rs  mod.rs  onboarding.rs  org_admin.rs  super_admin.rs
backend/src/services/: api_key.rs  license.rs  mod.rs
badge-service/: index.js  package-lock.json  package.json  vercel.json
badge-service/api/: badge.js
checkout/: README.md  index.html  portal.html  pricing.html  privacy.html  refund.html  terms.html
cli/: Cargo.toml
cli/src/: auth.rs  main.rs  onboarding.rs  serve.rs
docs/: app_details.md  claude_resume.md  developer-onboarding.md  index.html  org-admin-guide.md  self-hosting.md
docs/brainstorms/: brainstorm-daily-release-habits-2026-03-16.md  brainstorm-multi-tech-detection-2026-03-12.md  brainstorm-signed-release-pipeline-2026-03-25.md
docs/planning/: DESIGN_PROMPTS.md  MODERNIZATION_PLAN.md
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/tests/: auth.spec.ts  error-handling.spec.ts  health.spec.ts  helpers.ts  license-keys.spec.ts  license.spec.ts  super-admin.spec.ts
homebrew/: project-launcher.rb
lib/: main.dart  theme.dart
lib/dialogs/: export_dialog.dart  scan_dialog.dart
lib/kit/: kit.dart
lib/models/: project.dart  referral.dart  release_info.dart
lib/screens/: dashboard_customize_screen.dart  health_screen.dart  home_screen.dart  insights_screen.dart  log_screen.dart  notifications_screen.dart  onboarding_catalog_screen.dart  onboarding_screen.dart  plugins_screen.dart  pro_screen.dart  project_settings_screen.dart  referral_screen.dart  screens.dart  subscription_screen.dart  team_screen.dart  year_review_screen.dart
lib/services/: ai_service.dart  api_server.dart  background_monitor.dart  catalog_service.dart  cli_install_service.dart  compliance_service.dart  dashboard_config.dart  git_service.dart  (+21 more)
macos/: Podfile
raycast-extension/: package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
rust/: Cargo.toml
rust/src/: git.rs  health.rs  lib.rs  standalone_runner.rs  stats.rs
scripts/: addproject  build-dmg.sh  deploy-netlaunch.sh  generate-appcast.sh  generate-icon.py  install.sh  launch-debug.sh  release.sh  release_app.sh
super_admin_web/: pubspec.yaml
test/: widget_test.dart
vscode-extension/: .vscodeignore  package-lock.json  package.json
web_app/: pubspec.yaml
(+97 files in other folders)
