[package]
name = "plauncher-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
mongodb = "3"
bson = { version = "2", features = ["chrono-0_4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
dashmap = "6"
sha2 = "0.10"
urlencoding = "2"
