[package]
name = "plauncher"
version = "1.0.0"
edition = "2021"
description = "CLI companion for Project Launcher"
license = "MIT"

[[bin]]
name = "plauncher"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
colored = "2.1"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
