[package]
name = "project_launcher_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Git operations (use macOS native TLS to avoid OpenSSL cross-compile issues)
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

# File system
walkdir = "2.5"
glob = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
